--- a/_includes/search.html
+++ b/_includes/search.html
@@ -2,7 +2,7 @@
     SimpleJekyllSearch({
         searchInput: document.getElementById('search-input'),
         resultsContainer: document.getElementById('results-container'),
-        searchResultTemplate: '{% include_cached search-results-template.html %}',
+        searchResultTemplate: '{% include search-results-template.html %}',
         limit: 50,
         json: '/pages/search.json',
         noResultsText: '<li role="option"><span class="no-results">No results found</span></li>',
