--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" media="screen" href="{% include pageroot.md %}/docs/_static/docs.css" >
+        <link rel="stylesheet" type="text/css" media="screen" href="{% include pageroot.md %}/docs/static/docs.css" >
         <title>CoreUI Docs: {{ page.title }}</title>
     </head>
     <body>
