--- a/static/docs.css
+++ b/static/docs.css
@@ -9,3 +9,10 @@ header {
     box-shadow: 0 2px 4px rgba(0,0,0,.5);
     z-index: 10;
 }
+
+
+header {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
