--- a/static/docs.css
+++ b/static/docs.css
@@ -8,7 +8,21 @@ header {
     align-items: center;
     box-shadow: 0 2px 4px rgba(0,0,0,.5);
     z-index: 10;
+}
+
+header, #body {
     display: flex;
     justify-content: space-between;
     width: 100%;
+}
+
+#sidebar{
+    padding-top: 50px;
+    color: #21262c;
+    min-width: 265px;
+    width: 265px;
+    background-color: #edeff0;
+    display: flex;
+    flex-direction: column;
+    transition: margin .3s ease-in-out,box-shadow .3s 
 }
