--- a/static/docs.css
+++ b/static/docs.css
@@ -26,3 +26,10 @@ header, #body {
     flex-direction: column;
     transition: margin .3s ease-in-out,box-shadow .3s 
 }
+
+#content {
+    flex-grow: 1;
+    overflow-y: scroll;
+    background-color: #fff;
+    padding: 75px 2rem 2rem;
+}
