--- a/static/docs.css
+++ b/static/docs.css
@@ -1,3 +1,10 @@
+body {
+    margin: 0;
+    background-color: #edeff0;
+    -webkit-font-smoothing: antialiased;
+    color: #32363a;
+}
+
 header {
     position: fixed;
     top: 0;
