--- a/static/docs.css
+++ b/static/docs.css
@@ -15,6 +15,7 @@ header {
     align-items: center;
     box-shadow: 0 2px 4px rgba(0,0,0,.5);
     z-index: 10;
+    height: 36px;
 }
 
 header, #body {
